# web-wasm-project

./: .gitignore  README.md
frontend/: Cargo.toml  index.html  screen.css
frontend/src/lib/: lib.rs  views.rs
frontend/src/lib/components/: components.rs
frontend/src/lib/views/: views.rs
server/: Cargo.toml
server/src/: main.rs
